syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/plindsay/gopherservice/api/v1";

// Pet represents a pet in the pet store.
message Pet {
  // The unique identifier for the pet.
  string id = 1;
  // The name of the pet.
  string name = 2;
  // The species of the pet.
  string species = 3;
  // The birth date of the pet.
  google.protobuf.Timestamp birth_date = 4;
}

// Order represents an order for a pet.
message Order {
  // The unique identifier for the order.
  string id = 1;
  // The ID of the pet being ordered.
  string pet_id = 2;
  // The quantity of pets being ordered.
  int32 quantity = 3;
  // The date the order was placed.
  google.protobuf.Timestamp order_date = 4;
}

// CreatePetRequest is the request to create a new pet.
message CreatePetRequest {
  // The pet to create.
  Pet pet = 1;
}

// CreatePetResponse is the response after creating a new pet.
message CreatePetResponse {
  // The created pet.
  Pet pet = 1;
}

// GetPetRequest is the request to get a pet by its ID.
message GetPetRequest {
  // The ID of the pet to retrieve.
  string id = 1;
}

// GetPetResponse is the response containing the pet.
message GetPetResponse {
  // The retrieved pet.
  Pet pet = 1;
}

// PlaceOrderRequest is the request to place an order for a pet.
message PlaceOrderRequest {
  // The order to place.
  Order order = 1;
}

// PlaceOrderResponse is the response after placing an order.
message PlaceOrderResponse {
  // The placed order.
  Order order = 1;
}

// GetOrderRequest is the request to get an order by its ID.
message GetOrderRequest {
  // The ID of the order to retrieve.
  string id = 1;
}

// GetOrderResponse is the response containing the order.
message GetOrderResponse {
  // The retrieved order.
  Order order = 1;
}

// PetStoreService is the service for managing pets and orders.
service PetStoreService {
  // CreatePet creates a new pet.
  // This endpoint allows you to add a new pet to the pet store.
  rpc CreatePet(CreatePetRequest) returns (CreatePetResponse) {
    option (google.api.http) = {
      post: "/v1/pets"
      body: "*"
    };
  }

  // GetPet gets a pet by its ID.
  // This endpoint allows you to retrieve a pet from the pet store by its ID.
  rpc GetPet(GetPetRequest) returns (GetPetResponse) {
    option (google.api.http) = {
      get: "/v1/pets/{id}"
    };
  }

  // PlaceOrder places an order for a pet.
  // This endpoint allows you to place an order for a pet.
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }

  // GetOrder gets an order by its ID.
  // This endpoint allows you to retrieve an order by its ID.
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{id}"
    };
  }
}
